# polaroids

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
docs/: index.md
search/: search_index.json
src/polaric/: __init__.py  _utils.py  dataframe.py  dataframe.pyi
src/polaroids/: _parse_types.py  _utils.py  dataframe.py  dataframe.pyi  types.py
tests/: test_types.py  test_typing.py  test_validation.py
